--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -68,13 +68,17 @@
        "6"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# number_of_destinations() # 6"
+    "def number_of_destinations(travel_destinations):\n",
+    "    number_of_destinations = len(travel_destinations)\n",
+    "    return number_of_destinations # 6\n",
+    "number_of_destinations = number_of_destinations(travel_destinations)\n",
+    "number_of_destinations"
    ]
   },
   {
@@ -86,11 +90,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def next_up(travel_destinations):\n",
+    "    next_up = travel_destinations[0].title()\n",
+    "    return next_up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Below, remove the first `#` to uncomment the following line(s) of code and then press `shift` + `enter` to run the cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Argentina'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_of_destinations = ['argentina', 'canada', 'croatia']\n",
+    "next_up(list_of_destinations) # 'argentina'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok, now write a function called `favorite_destination` that returns the string `'madagascar'`."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "def favorite_destination():\n",
+    "    return 'Madagascar'"
    ]
   },
   {
@@ -108,7 +159,7 @@
     {
      "data": {
       "text/plain": [
-       "'argentina'"
+       "'Madagascar'"
       ]
      },
      "execution_count": 11,
@@ -117,15 +168,14 @@
     }
    ],
    "source": [
-    "list_of_destinations = ['argentina', 'canada', 'croatia']\n",
-    "# next_up() # 'argentina'"
+    "favorite_destination() # 'madagascar'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ok, now write a function called `favorite_destination` that returns the string `'madagascar'`."
+    "Again, let's declare a list called `favorite_destinations`. Write a new function called `add_favorite_destination` that also returns the string `'madagascar'`, but adds the string `'madagascar'` to the end of the list, `favorite_destinations`, as well."
    ]
   },
   {
@@ -134,7 +184,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "favorite_destinations = []\n",
+    "def add_favorite_destination(favorite_destinations):\n",
+    "    favorite_destinations.append(favorite_destination())\n",
+    "    return favorite_destination()"
    ]
   },
   {
@@ -152,7 +205,7 @@
     {
      "data": {
       "text/plain": [
-       "'madagascar'"
+       "'Madagascar'"
       ]
      },
      "execution_count": 13,
@@ -161,58 +214,8 @@
     }
    ],
    "source": [
-    "# favorite_destination() # 'madagascar'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Again, let's declare a list called `favorite_destinations`. Write a new function called `add_favorite_destination` that also returns the string `'madagascar'`, but adds the string `'madagascar'` to the end of the list, `favorite_destinations`, as well."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define function here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Below, remove the first `#` to uncomment the following line(s) of code and then press `shift` + `enter` to run the cell"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'madagascar']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'madagascar'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "favorite_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "# add_favorite_destination()\n",
+    "add_favorite_destination(favorite_destinations)\n",
     "favorite_destinations[-1] # 'madagascar'"
    ]
   },
@@ -225,12 +228,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "# define function here"
+    "def capitalize_countries(capitalized_destinations):\n",
+    "    for i in range(0,len(capitalized_destinations)):\n",
+    "        capitalized_destinations[i] = (capitalized_destinations[i]).title()\n",
+    "    return capitalized_destinations"
    ]
   },
   {
@@ -242,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -251,13 +257,13 @@
        "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
+    "capitalize_countries(capitalized_destinations) # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
    ]
   },
   {
@@ -298,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
